DEV-36065: New PublicApi Java sample - fix order request and order modification request